Reportes terminados menos el de transferencia y transacciones

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
     <string name="menu_añadir_tipo_producto">Añadir Tipo de Producto</string>
     <string name ="menu_remover_inventario">Remover Inventario</string>
     <string name ="menu_añadir_transferencia">Añadir Transferencia</string>
+    <string name ="menu_mis_transacciones">Mis transacciones</string>
+    <string name ="menu_mis_transferencias">Mis transferencias</string>
     <string name ="menu_mis_datos">Mis Datos</string>
     <string name ="menu_almacenes">Almacenes</string>
     <string name ="menu_clientes">Clientes</string>
@@ -32,7 +34,8 @@
     <string name ="menu_proveedores">Proveedores</string>
     <string name ="menu_tipos_de_productos">Tipos de Productos</string>
     <string name ="menu_editar_almacen">Editar almacén</string>
-    <string name ="menu_editar_tipos_de_producto">Editar Tipo de Producto</string>
+    <string name ="menu_editar_tipos_de_productos">Editar Tipo de Producto</string>
+    <string name="menu_editar_cantidad_tipos_de_productos">Editar cantidad</string>
     <string name ="menu_editar_producto">Editar Producto</string>
     <string name ="menu_editar_proveedor">Editar Proveedor</string>
     <string name ="menu_editar_cliente">Editar Cliente</string>
@@ -306,9 +309,16 @@
     <!-- Editar cliente fragment -->
     <string name="title_nombre_cliente">NOMBRE DEL CLIENTE</string>
     <string name="placeholder_dirección_cliente">Escriba la dirección del cliente </string>
+    <string name ="title_cliente_editar">ESTADO DEL CLIENTE</string>
 
     <!-- Editar proveedor fragment -->
+     <string name="title_proveedor_editar">ESTADO DEL PROVEEDOR</string>
 
+    <!-- Editar tipo de producto -->
+    <string name ="title_estado_tipo_de_producto_editar">ESTADO DEL TIPO DE PRODUCTO</string>
+
+    <!--Editar producto -->
+    <string name = "title_estado_producto_editar">ESTADO DEL PRODUCTO</string>
 
     <!-- bottom_nav -->
     <string name="almacenes">Almacenes</string>
@@ -316,6 +326,11 @@
     <string name="productos">Productos</string>
     <string name="proveedores">Proveedores</string>
     <string name="clientes">Clientes</string>
+
+    <!--EditarCantidadTiposDeProductosFragment -->
+
+    <string name="title_editar_cantidad">EDITAR CANTIDAD</string>
+    <string name="button_change">CAMBIAR</string>
 
 
 
